[Mac] Mirror bookmark bubble in RTL

BUG=726398

Review-Url: https://codereview.chromium.org/2905773003
Cr-Commit-Position: refs/heads/master@{#475006}

Former-commit-id: 83b898248b21bd35c368e2a23b71322e67f74a8d